Closed Bug 2059455 Opened 1 month ago Closed 20 days ago

some lines of wrapped link not underlined on hover

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

VERIFIED FIXED
156 Branch
Tracking Status
firefox155 --- verified
firefox156 --- verified

People

(Reporter: aryx, Assigned: gw)

Details

Attachments

(2 files, 1 obsolete file)

Firefox 155.0a1 20260729213106 on Windows 11

If this Slack message is open in the sidebar in Slack with winder.innerHeight 891 and innerWidth at 1409 pixel while the device pixel ratio is 1.25, only every second line of the link gets underlined. The DOM Inspector shows the whole link as one element.

The severity field is not set for this bug.
:gw, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(mozilla)

The severity field is not set for this bug.
:gw, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(mozilla)
Assignee: nobody → mozilla
Severity: -- → S3
Flags: needinfo?(mozilla)
Attachment #9625999 - Attachment is obsolete: true
Pushed by gwatson@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/d1a16dbeff97 https://hg.mozilla.org/integration/autoland/rev/c75cf8a6c788 Round a decoration range clip outward on the block axis so it cannot shave the line. r=layout-reviewers,emilio
Status: NEW → RESOLVED
Closed: 20 days ago
Resolution: --- → FIXED
Target Milestone: --- → 156 Branch

The patch landed in nightly and beta is affected.
:gw, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(mozilla)
Attachment #9627484 - Flags: approval-mozilla-beta?
Flags: needinfo?(mozilla)

firefox-beta Uplift Approval Request

  • User impact if declined/Reason for urgency: Visual artifacts
  • Code covered by automated testing?: yes
  • Fix verified in Nightly?: yes
  • Needs manual QE testing?: yes
  • Steps to reproduce for manual QE testing: Per bug report
  • Risk associated with taking this patch: low
  • Explanation of risk level: Small patch
  • String changes made/needed?: No
  • Is Android affected?: yes
Flags: qe-verify+
Flags: in-testsuite+
Attachment #9627484 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [uplift] [qa-ver-needed-c156/b155]

I have reproduced this issue using Firefox 155.0a1 (2026.07.24) on Windows 11.
I can confirm this issue is fixed, I verified using latest Nightly Firefox 156.0a1 (2026.08.19) and Firefox 155.0b1-build2 on Windows 11.

Status: RESOLVED → VERIFIED
QA Whiteboard: [uplift] [qa-ver-needed-c156/b155] → [uplift] [qa-ver-done-c156/b155]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: