Bug 2059455 - Round a decoration range clip outward on the block axis so it cannot shave the line. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D318361